CBUG-2624 Accept/Reject buttons are not aligned correctly on the online request (#1054)
* fix accept reject button

* add button

--- a/client/components/Requests/RequestPopover/reskin-styles.scss
+++ b/client/components/Requests/RequestPopover/reskin-styles.scss
@@ -59,6 +59,7 @@ $secondary-button-border-color: $color-lavender-500;
   margin-left: auto;
   padding: 1px 7px 2px;
   &:hover {
+    background: none;
     color: $super-white;
     cursor: pointer;
   }
@@ -213,26 +214,6 @@ $secondary-button-border-color: $color-lavender-500;
   }
 }
 
-.primaryButton {
-  background-color: $primary-button-color;
-  border-radius: 4px;
-  color: $primary-button-text-color;
-  margin-left: 5px;
-  &:hover {
-    background: $primary-button-color-hover;
-  }
-}
-
-.secondaryButton {
-  background-color: $secondary-button-color;
-  border: 1px solid $secondary-button-border-color;
-  border-radius: 4px;
-  color: $secondary-button-text-color;
-  &:hover {
-    background-color: $secondary-button-color-hover;
-  }
-}
-
 .requestedAt {
   color: $color-grey-400;
   font-size: $x-small-size;
@@ -257,4 +238,8 @@ $secondary-button-border-color: $color-lavender-500;
 
 .requestIcon {
   font-weight: 400;
+}
+.RequestButton {
+  margin-left: 12px;
+  padding: 6px 8px;
 }
